fix contrast issue in hearing schedule alert

--- a/client/app/styles/_main.scss
+++ b/client/app/styles/_main.scss
@@ -341,6 +341,12 @@ select {
       font-size: 19px;
     }
   }
+
+  button {
+    &:last-child {
+      margin-right: 2rem;
+    }
+  }
 }
 
 .cf-no-styling-list {
